Basic implementation of configuration page.

--- a/src/main/resources/com/seitenbau/jenkins/plugins/dynamicparameter/DynamicParameterManagement/index.properties
+++ b/src/main/resources/com/seitenbau/jenkins/plugins/dynamicparameter/DynamicParameterManagement/index.properties
@@ -19,3 +19,6 @@ uploadFile=Upload Groovy class file
 upload=Upload
 save=Save
 uploadedFiles=Uploaded files
+downloadFile=Download file
+deleteFile=Delete file
+deleteConfirmation=Are you sure you want to delete
